# ombot

./: README.md  hallap1-1.pgm  hallap1-1.yaml  hallap1-1gmap.pgm  hallap1-1gmap.yaml  hallap1-1ommapp.pgm  hallap1-1ommapp.yaml  interlab-1ommapp.pgm  interlab-1ommapp.yaml  interlab-2dmap.pgm  interlab-2dmap.yaml
Mobile robot modified/CAD/Final/: Assem3_1.SLDASM  AsusXtion.SLDPRT  BEARING-FLAT.SLDPRT  BEC_5A.SLDPRT  DCDC-USB.SLDPRT  SHAFT-4000.SLDPRT  SHAFT-COLLAR.SLDPRT  Soporte2.SLDASM  Tapa.SLDPRT  UltraSonic.sldprt  angle.SLDPRT  back_plate.SLDPRT  back_plate_modified.SLDPRT  batter_bracket.SLDPRT  battery_153Wh.SLDPRT  bottom_plate.SLDPRT  breadboard.SLDPRT  conn_rear.SLDPRT  connector_frontal.SLDPRT  front_plate.SLDPRT  hdd.SLDPRT  hex thin nut chamfered gradeab_din.sldprt  left_side_plate.SLDPRT  new_left_Support.SLDPRT  new_right_Support.SLDPRT  part2_1.sldprt  pin header.sldprt  plain washer 6902 type abc_din.sldprt  pololu_step_down.SLDPRT  prevailing torque nut style 1 insert_din.sldprt  right_side_plate.SLDPRT  shovel.SLDPRT  socket head cap screw_din.sldprt  socket head cap screw_iso.sldprt  soporte1.SLDPRT  soporte1_angle.SLDPRT  stinger_plate.SLDPRT  support_cables.SLDPRT  top_plate_2.SLDPRT  vex_motorcontroller29.SLDPRT
Mobile robot modified/CAD/Source/: vex_motorcontroller29.STEP
Mobile robot modified/Drawings/: back_plate.AI  back_plate.SLDDRW  bottom_plate.AI  bottom_plate.SLDDRW  front_plate.AI  front_plate.SLDDRW  left_side_plate.AI  left_side_plate.SLDDRW  right_side_plate.AI  right_side_plate.SLDDRW  shovel.AI  shovel.SLDDRW  stinger_plate.AI  stinger_plate.SLDDRW  top_plate_2.AI  top_plate_2.SLDDRW
arduino/: Om_Bot.ino
arduino/libraries/I2Cdev/: I2Cdev.cpp
arduino/libraries/MPU6050/: MPU6050.h
arduino/libraries/Odometer/: keywords.txt  keywords.txt~  odometer.cpp  odometer.cpp~  odometer.h  odometer.h~
arduino/libraries/Odometer3/: keywords.txt  odometer.cpp~  odometer.h~  odometer3.cpp  odometer3.cpp~  odometer3.h  odometer3.h~
arduino/libraries/PID_v1/: PID_v1.cpp  PID_v1.cpp~  PID_v1.h
arduino/libraries/kinematics_arduino/: keywords.txt  kinematics_arduino.cpp  kinematics_arduino.cpp~  kinematics_arduino.h~
arduino/om_bot_three_wheels/: om_bot_three_wheels.ino  om_bot_three_wheels_final.ino
om_bot/: CMakeLists.txt  CMakeLists.txt~  costmap_pluginst.xml  package.xml  package.xml~
om_bot/action/: get_close.action  get_close.action~
om_bot/cfg/: mydynamic.cfg  mydynamic.cfg~
om_bot/launch/: amcl.launch  amcl_omni.launch  amcl_omni.launch~  amcl_omnilobster.launch  arduino.launch~  bag_record.launch~  base_controller.launch  base_controller.launch~  base_controller3.launch  camera_laser.launch  camera_laser.launch~  cdisplay.launch~  ddisplay.launch~  display.launch  display.launch~  display2.launch  display2.launch~  gmapping.launch  gmapping.launch~  localisation.launch  map_amcl.launch  map_simulation.launch  move_base.launch~  move_base2.launch  move_base2.launch~  move_basesimulation.launch  ocugmapping.launch~  om_bot.launch~  om_botlobster.launch  om_mapping.launch  ps3.launch~  push_object.launch  push_object.launch~  remote.launch  remote.launch~  rviz.launch  rviz.launch~  scorp.launch~  simulation.launch  simulation.launch~  (+3 more)
om_bot/maps/: hall18-1.pgm  hall18-1.yaml  hall27-3.pgm  hall27-3.yaml  lab18dec.pgm  lab21.pgm  lab21.yaml  lab22.pgm  lab22.yaml  lab30.pgm  lab30.yaml  labo12.pgm  labo12.yaml  labo121.pgm  labo121.yaml  labo122.pgm  labo122.yaml  labo123.pgm  labo123.yaml  labo13.pgm  labo13.yaml  labo131.pgm  labo131.yaml  labo14.pgm  labo14.yaml  labo15.pgm  labo15.yaml  labo15.yaml~  labodec.pgm  labodec.yaml  maplab1.pgm  maplab1.yaml  march12-2.pgm  march12-2.yaml  march12-3.pgm  march12-3.yaml  march12-4.pgm  march12-4.yaml  march12.pgm  march12.yaml  (+14 more)
om_bot/meshes/: AsusXtion.STL  Camera.STL  asusxtionascii.STL  asusxtionbinary.STL  asusxtionm.STL
om_bot/meshes/STL/: AsusXtion.STL  base_link.STL
om_bot/msg/: speed_wheel.msg  speed_wheel.msg~
om_bot/params/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  dwa_local_planner_params.yaml  dwa_local_planner_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml  mux.yaml
om_bot/robots/: kinect.urdssf.xacro  omni.URDF~  omni.gv  omni.urdf.xacro~  omni.urdfOLD.xacro~  omni2.urdf.xacro  omni2.urdf.xacro~  omniold.urdf.xacro~  xtion.urdf.xacro  xtion.urdf.xacro~  xtion.xacro~
om_bot/rviz/: my_vis.rviz  omni.rviz  omni.rviz~  omni2.rviz
om_bot/scripts/: Arduino.py  Arduino.py.OLD  Arduino.py~  ArduinoOLD.py  SerialDataGateway.py~
om_bot/src/: close_to_object.cpp  control_transform.cpp  fake_laserscan.cpp  imu_om.cpp  imu_om.cpp~  odometry_test.cpp  odometry_test.cpp~  push_object.cpp  push_object.cpp~  rgoodwheels_s.cpp  rgoodwheels_s.cpp~  rgoodwheelsr.cpp  rgoodwheelsr.cpp~  rkinematics.cpp  rkinematics.cpp~  rodom_broadcaster.cpp  rodom_broadcaster.cpp~  rodom_broadcastercmd_vel.cpp  rodom_broadcastercmd_vel.cpp~  rps3_node.cpp  rps3_node.cpp~  rspeedcontrol.cpp  rspeedcontrol.cpp.save  rspeedcontrol.cpp~  rspeedcontroldsds.cpp  rspeedcontroldsds.cpp~  rspeedcontrolps3.cpp~  rspeedcontrolps3normal.cpp~  rtf_broadcaster.cpp  rtf_broadcaster.cpp~  rtf_listener.cpp  test_action.cpp  test_action.cpp~  ul_range.cpp  ul_range.cpp~
om_bot/src/getclose_action/: close_action.cpp  close_action.cpp~
om_bot/src/map_plugin/: grid_layer.cpp  grid_layer.cpp~  grid_layer.h  simple_layer.cpp  simple_layer.cpp~  simple_layer.h  simple_layer_sub.cpp  simple_layer_sub.cpp~  simple_layer_sub.h  simple_layer_sub.h~
om_bot/srv/: angularscale.srv  angularscale.srv~  imuactive.srv  linearscale.srv  linearscale.srv~
om_bot/tele-package/teleop_twist_joy/: CMakeLists.txt
om_bot/tele-package/teleop_twist_joy/config/: ps3.config.yaml  ps3.config.yaml~
om_bot/tele-package/teleop_twist_joy/launch/: teleop.launch
om_bot/tele-package/teleop_twist_joy/src/: teleop_twist_joy.cpp
(+7 files in other folders)
